2005-09-03  Kazuhiko  <kazuhiko@fdiary.net>
	* amazon.rb: not display images in the category mode.

2005-09-01  Kazuhiko  <kazuhiko@fdiary.net>
	* amazon.rb: escape HTML in labels.
	* amazon/amazonimg.rb: mkdir @cache_path if not exists. revise for
	mod_ruby.

2002-08-31 TADA Tadahi <sho@spc.gr.jp>
	* amazon.rb: whole rewrite using Amazon ECS 4.0.
	* add amazon/amazonimg.rb: support CGI script for amazon.rb.

2002-08-30 SHIBATA Hiroshi <h-sbt@nifty.com>
	* recent_comment3.rb: change date format at tree view mode.

2002-08-28 SHIBATA Hiroshi <h-sbt@nifty.com>
	* recent_comment3.rb: add Tree view mode. 
   thanks MORIOKA Toru <vette at mail.ne.jp>.

2002-08-25 TADA Tadahi <sho@spc.gr.jp>
	* specify genre of preference to some plugins.

2005-08-20 Taku YASUI <tach at debian.or.jp>
	* tb-send.rb: support basic authentication for TrackBack ping URL.

2005-08-18 zunda <zunda at freeshell.org>
	* recent_comment3.rb: no longer records comments rejected by filter/spam.rb

2002-08-15 TADA Tadahi <sho@spc.gr.jp>
	* calendar2.rb: add image mode, thanks KASHIJUKU <n-kashi at whi.m-net.ne.jp>
	* recent_comment3.rb, recent_trackback3.rb: disable on secure mode.
	* calendar2.rb: i18n.

2002-08-11 TADA Tadahi <sho@spc.gr.jp>
	* sqeeze.rb: fix fatal bug when running on CGI mode.
	thanks TAKEMURA Masahiro <mas at mstk.que.jp>.
	* hilight.rb, append-css.rb: suppress action for bot.

2002-08-10 TADA Tadahi <sho@spc.gr.jp>
	* my-ex.rb: generate absolute URLs.

2005-08-10  Kazuhiko  <kazuhiko@fdiary.net>
	* makerss.rb (makerss_body): output the full text of comments to
	<content:encoded>.

2002-08-07 TADA Tadahi <sho@spc.gr.jp>
	* image.rb: default value of @image_url to absolute URL. 

2002-08-07 MORIOKA Toru <vette at mail.ne.jp>
	* makerss.rb: change <copyright> to <dc:rights>.

2002-08-07 Kazuhiro NISHIYAMA <zn@mbf.nifty.com>
	* makelirs.rb: fix when update.rb is in different path of index.rb.

2005-07-31 TADA Tadashi <sho@spc.gr.jp>
	* highlight.rb : add copyright.
